name:                brainfuck-haskell
version:             0.1.0.0
homepage:            https://github.com/tomwadeson/brainfuck-haskell
license:             BSD3
license-file:        LICENSE
author:              Tom Wadeson
maintainer:          tom@tomwadeson.com
copyright:           2018 Tom Wadeson
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable brainfuck-haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , text
                     , mtl
                     , vector
                     , monad-loops
  other-modules:       Types
                     , Parser
                     , Evaluator
